2010-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-annotate.el (vc-annotate): Use vc-read-revision.

2010-06-15  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el (appt-time-msg-list): Doc fix.
	(appt-check): Let-bind appt-warn-time.
	(appt-add): Make the 3rd argument optional.
	Simplify argument names.  Doc fix.  Check for integer WARNTIME.
	Only add WARNTIME to the output list if non-nil.

2010-06-15  Ivan Kanis  <apple@kanis.eu>

	* calendar/appt.el (appt-check): Let the 3rd element of
	appt-time-msg-list specify the warning time.
	(appt-add): Add new argument with the warning time.  (Bug#5176)

2010-06-12  Bob Rogers  <rogers-emacs@rgrjr.dyndns.org>  (tiny change)

	* vc-svn.el (vc-svn-after-dir-status): Fix regexp for Subversions
	older than version 1.6.  (Bug#6361)

2010-06-12  Helmut Eller  <eller.helmut@gmail.com>

	* emacs-lisp/cl-macs.el (destructuring-bind): Bind `bind-enquote',
	used by cl-do-arglist.  (Bug#6408)

2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/advice.el (ad-compile-function):
	Define warning-suppress-types before we let-bind it (bug#6275).

	* vc-dispatcher.el: Rename mode-line-hook to vc-mode-line-hook;
	declare it, make it buffer-local and permanent-local (bug#6324).
	(vc-resynch-window): Adjust name.
	* vc-hooks.el (vc-find-file-hook): Adjust name.

2010-06-07  Jonathan Rockway  <jon@jrock.us>

	* net/rcirc.el: Add support for password authentication.
	(rcirc-server-alist): Add :password keyword.
	(rcirc): Ask for a password, or get it from the server's alist.
	(rcirc-connect): Add password argument.  Pass it to server.

2010-06-05  Juanma Barranquero  <lekktu@gmail.com>

	* net/dbus.el (dbus-register-method): Declare function.
	(dbus-handle-event, dbus-property-handler): Fix typos in docstrings.
	(dbus-introspect): Doc fix.
	(dbus-event-bus-name, dbus-introspect-get-interface)
	(dbus-introspect-get-argument): Reflow docstrings.

2010-06-04  Chong Yidong  <cyd@stupidchicken.com>
